@@ -5,6 +5,8 @@ sodium
 --SKIPIF--
 <?php
 if (!defined('SODIUM_CRYPTO_AEAD_AES256GCM_NPUBBYTES')) print "skip libsodium without AESGCM";
+if (!defined('SODIUM_CRYPTO_AEAD_AEGIS128L_NPUBBYTES')) print "skip libsodium without AEGIS-128L";
+if (!defined('SODIUM_CRYPTO_AEAD_AEGIS256_NPUBBYTES')) print "skip libsodium without AEGIS-256";
 ?>
 --FILE--
 <?php
@@ -111,6 +113,58 @@ if (sodium_crypto_aead_aes256gcm_is_available()) {
     var_dump(false);
     var_dump(true);
 }
+
+echo "aead_aegis128l:\n";
+
+if (defined('SODIUM_CRYPTO_AEAD_AEGIS128L_NPUBBYTES')) {
+    $msg = random_bytes(random_int(1, 1000));
+    $nonce = random_bytes(SODIUM_CRYPTO_AEAD_AEGIS128L_NPUBBYTES);
+    $ad = random_bytes(random_int(1, 1000));
+    $key = sodium_crypto_aead_aegis128l_keygen();
+    $ciphertext = sodium_crypto_aead_aegis128l_encrypt($msg, $ad, $nonce, $key);
+    $msg2 = sodium_crypto_aead_aegis128l_decrypt($ciphertext, $ad, $nonce, $key);
+    var_dump($ciphertext !== $msg);
+    var_dump($msg === $msg2);
+    var_dump(sodium_crypto_aead_aegis128l_decrypt($ciphertext, 'x' . $ad, $nonce, $key));
+    try {
+        // Switched order
+        $msg2 = sodium_crypto_aead_aegis128l_decrypt($ciphertext, $ad, $key, $nonce);
+        var_dump(false);
+    } catch (SodiumException $ex) {
+        var_dump(true);
+    }
+} else {
+    var_dump(true);
+    var_dump(true);
+    var_dump(false);
+    var_dump(false);
+}
+
+echo "aead_aegis256:\n";
+
+if (defined('SODIUM_CRYPTO_AEAD_AEGIS256_NPUBBYTES')) {
+    $msg = random_bytes(random_int(1, 1000));
+    $nonce = random_bytes(SODIUM_CRYPTO_AEAD_AEGIS256_NPUBBYTES);
+    $ad = random_bytes(random_int(1, 1000));
+    $key = sodium_crypto_aead_aegis256_keygen();
+    $ciphertext = sodium_crypto_aead_aegis256_encrypt($msg, $ad, $nonce, $key);
+    $msg2 = sodium_crypto_aead_aegis256_decrypt($ciphertext, $ad, $nonce, $key);
+    var_dump($ciphertext !== $msg);
+    var_dump($msg === $msg2);
+    var_dump(sodium_crypto_aead_aegis256_decrypt($ciphertext, 'x' . $ad, $nonce, $key));
+    try {
+        // Switched order
+        $msg2 = sodium_crypto_aead_aegis256_decrypt($ciphertext, $ad, $key, $nonce);
+        var_dump(false);
+    } catch (SodiumException $ex) {
+        var_dump(true);
+    }
+} else {
+    var_dump(true);
+    var_dump(true);
+    var_dump(false);
+    var_dump(false);
+}
 ?>
 --EXPECT--
 aead_chacha20poly1305:
@@ -133,3 +187,13 @@ bool(true)
 bool(true)
 bool(false)
 bool(true)
+aead_aegis128l:
+bool(true)
+bool(true)
+bool(false)
+bool(false)
+aead_aegis256:
+bool(true)
+bool(true)
+bool(false)
+bool(false)
